# ArchMAP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  archmap.spec  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: index.js
core/: index.js
core/analyzer/: index.js
core/graph/: index.js
core/parser/: constants.js  index.js  jsTsParser.js  pythonParser.js  resolver.js  rustParser.js
docs/: BRANCHING.md  MIGRATION_TO_PYTHON.md  api.md  architecture.md  index.md
docs/cli/: analyze.md  diff.md  serve.md
docs/getting-started/: installation.md  quickstart.md
examples/: README.md
examples/sample-project/: __init__.py  a.py  b.py  c.py
examples/sample-project/app/: controller.py  service.py
examples/sample-project/cli/: main.py
examples/sample-project/core/: models.py  validators.py
examples/sample-project/utils/: logger.py
exporters/: jsonExporter.js  mermaidExporter.js
scripts/: benchmark.py  run-smoke.ps1
src/archmap/: __init__.py
src/archmap/cli/: __init__.py  main.py
src/archmap/core/: __init__.py
src/archmap/exporters/: __init__.py  cytoscape_exporter.py  (+2 more)
test/: analyzer.test.js  cli.test.js  exporters.test.js  parsers.test.js
tests/: test_analyzer.py  test_cli.py  test_diff.py  test_exporters.py  test_parser_dependencies.py  test_parsers.py
web-ui/: server.js
web-ui/static/: app.js  index.html  styles.css
(+15 files in other folders)
